# blueripple-research

./: .gitignore  BlueRipple.cabal  CODE_OF_CONDUCT.md  Organizing.txt  TAGS  blueripple-research.cabal  cabal.project  cabal.project.8.10.7  cabal.project.9.2.5  cabal.project.9.4.2  cabal.project.freeze  cdStateOverlaps.csv  ghci.conf  hie.yaml  hie.yaml.old  housedata.html  overlappingSLDs.xlsx  polled.csv  preference-model.cabal  setup_stan.fish  stanEnv.fish.txt  unpolled.csv
FEC-data/: FromDB.hs  Main.hs
br-2021-A/: Main.hs
br-2021-NewMaps/: CDistrictPost.hs  DemoCompChart.hs  Main.hs
br-2021-StateLegModel/: DataFrames.hs  DataPaths.hs  ElectionResultsLoaders.hs  Main.hs
br-2021-StateLegModel/data/: va_cvap_2019_sldl.csv  va_cvap_2019_sldu.csv
br-2021-VA/: Main.hs  VA_DataFrames.hs  VA_DataPaths.hs
br-2022-AgeModel/: Main.hs
br-2022-Demographics/: Main.hs
br-2022-EduModel/: Main.hs
br-2023-StateLeg/: Main.hs  ModelNotes.hs
br-2023-TSP/: Main.hs
br-2023-electionModel/: Main.hs
br-Gaba/: Main.hs
data/: 1976-2018-house_v2.csv  2016Turnout.csv  2016Turnout.xls  DetailedTurnoutByAgeSexEducation2010-2018.csv  DetailedTurnoutByAgeSexEducation2010-2018.xlsx  DetailedTurnoutByAgeSexRace.xlsx  DetailedTurnoutByAgeSexRace2010-2018.csv  DetailedTurnoutByAgeSexRace2010-2018.xlsx  DetailedTurnoutByRaceSexAge2010-2018.csv  DetailedTurnoutBySexAgeEducation2010-2018.csv  DetailedTurnoutBySexAgeEducation2010-2018.xlsx  EdisonExitPoll2018.csv  Turnout2012-2018.csv  Turnout2016-2018.csv  ageSexRaceDemographics2010-2017.csv  allSpendingFrom20180801Through20181106.csv  allSpendingThrough20180731.csv  allSpendingThrough20181106.csv  allTogetherFrame.csv  angryDemsContributions20181203.csv  angryDemsContributions20181203_orig.csv  angrydems-contributions -- final 2018.12.03.csv  contextDemographicsByDistrict.csv  electionResult2018.csv  identityDemographicsByDistrict.csv  identityDemographicsByDistrict2012.csv  identityDemographicsByDistrict2014.csv  identityDemographicsByDistrict2016.csv  states.csv  ~$DetailedTurnoutByRaceSexAge.xlsx
data/cdOverlaps/: AL.csv  AR.csv  AZ.csv  CA.csv  CO.csv  CT.csv  FL.csv  GA.csv  HI.csv  IA.csv  ID.csv  IL.csv  IN.csv  KS.csv  KY.csv  LA.csv  MA.csv  MD.csv  ME.csv  MI.csv  MN.csv  MO.csv  MS.csv  MT.csv  NC.csv  NE.csv  NH.csv  NJ.csv  NM.csv  NV.csv  NY.csv  OH.csv  OK.csv  OR.csv  PA.csv  RI.csv  SC.csv  TN.csv  TX.csv  UT.csv  (+4 more)
data/districtOverlaps/: AK_SLDL_CD.csv  AK_SLDU_CD.csv  AL_SLDL_CD.csv  AL_SLDU_CD.csv  AR_SLDL_CD.csv  AR_SLDU_CD.csv  AZ_SLDU_CD.csv  AZ_SLD_CD.csv  CA_SLDL_CD.csv  CA_SLDU_CD.csv  CO_SLDL_CD.csv  CO_SLDU_CD.csv  CT_SLDL_CD.csv  CT_SLDU_CD.csv  FL_SLDL_CD.csv  FL_SLDU_CD.csv  GA_SLDL_CD.csv  GA_SLDU_CD.csv  HI_SLDL_CD.csv  HI_SLDU_CD.csv  IA_SLDL_CD.csv  IA_SLDU_CD.csv  ID_SLDU_CD.csv  IL_SLDL_CD.csv  IL_SLDU_CD.csv  IN_SLDL_CD.csv  IN_SLDU_CD.csv  KS_SLDL_CD.csv  KS_SLDU_CD.csv  KY_SLDL_CD.csv  KY_SLDU_CD.csv  LA_SLDL_CD.csv  LA_SLDU_CD.csv  MA_SLDL_CD.csv  MA_SLDU_CD.csv  MD_SLDL_CD.csv  MD_SLDU_CD.csv  ME_SLDL_CD.csv  ME_SLDU_CD.csv  MI_SLDL_CD.csv  (+46 more)
data/forPosts/: GA_2020_general.csv  NV_Lower_2020_General.csv  OH_2020_General.csv  OH_2020_General.numbers  TX_2020_general.csv  VA_2019_General.json
data/redistricting/: AK_congressional.csv  AK_sldl.csv  AK_sldu.csv  AL_congressional.csv  AL_sldl.csv  AL_sldu.csv  AR_congressional.csv  AR_sldl.csv  AR_sldu.csv  AZ_sldu.csv  CA_congressional.csv  CA_sldl.csv  CA_sldu.csv  CO_congressional.csv  CO_sldl.csv  CO_sldu.csv  CT_congressional.csv  CT_sldl.csv  CT_sldu.csv  DE_sldl.csv  DE_sldu.csv  FL_congresional.csv  FL_congressional.csv  FL_sldl.csv  FL_sldu.csv  GA_congressional.csv  GA_sldl.csv  GA_sldu.csv  HI_congressional.csv  HI_sldl.csv  HI_sldu.csv  IA_congressional.csv  IA_sldl.csv  IA_sldu.csv  ID_congressional.csv  ID_sldu.csv  IL_congressional.csv  IL_sldl.csv  IL_sldu.csv  IN_congressional.csv  (+109 more)
dataLoader/: dataLoader.hs
georgia/: Data.hs  GA_DataFrames.hs  GA_DataPaths.hs  Main.hs  Models.hs  Parsers.hs
haskell-stan/test/: DataSets.hs  KnitEnvironment.hs  Main.hs  Models.hs  test.html
haskell-stan/testExpressions/: Main.hs
house-data/: Main.hs
house_model/: Compare Predictors1.html  Examine Predictors1.html  compare_data_sets.html  compare_models.html  compare_predictors.html  compare_vote_totals.html  examine_fit.html  examine_predictors.html  examine_turnout_gapss.html
mission/: mission.hs
mission/html/: mission.html  turnout.html
modelNotes/: Model_Details_20231019.md  Model_Details_intro.md  electionModel.md
pandoc-templates/: blueripple_basic.html  minWithVega-pandoc.html
posts/explainer/: WWCV.html
references/: refs.md
reports/: MRP_Basics.hs  Methods.hs  P1.hs  P1A.hs  P2.hs  P3.hs  PrefCommon.hs  WWCV.numbers  preference_model.hs  turnout.hs
reports/Explainer/: WWCV.hs  WWCV.numbers  WWCV.xlsx
reports/MRP/: BidenVsWWC.hs  CCES.hs  CCESFrame.hs  CCESPath.hs  CCES_MRP_Analysis.hs  CachedModels.hs  Common.hs  DeltaVPV.hs  DistrictClusters.hs  EdVoters.hs  ElectoralWeights.hs  Intro.hs  Kentucky.hs  Language.hs  MRP.hs  Pools.hs  TurnoutGaps.hs  TurnoutScenarios.hs  WWC.hs  Wisconsin.hs  Wisonsin.hs
reports/PreferenceModel/: AcrossTime.hs  Common.hs  ExitPolls.hs  Methods.hs  PM2018.hs  preference_model.hs
reports/Visualizations/: StatePrefs.hs
reports/explainer/: WWCV.xlsx
reports/html/: turnout.html  turnout_20190513.html  turnout_allAges.html  turnout_converged.html  turnout_longRun.html  turnout_qd.html  turnout_simpleAges.html
src/BlueRipple/: Configuration.hs
src/Stan/: Frames.hs  JSON.hs  ModelBuilder.hs  ModelCompiler.hs  ModelConfig.hs  ModelRunner.hs  Parameters.hs  RScriptBuilder.hs
stan/: Main.hs  ccesTest.json  models.csv  prefMR.hpp  prefMR.stan  prefMRP  prefMRP.hpp  prefMRP.stan  prefMRP_out  prefR.hpp  prefR_dat.json
stan/ccesPref/: prefMR  prefMR.stan  prefMRP.hpp  prefMRP.stan  prefR
stan/voterPref/: binomial_ASER5_model.stan  binomial_ASER5_state_loo.hpp  binomial_ASER5_state_loo_o1.stan  binomial_ASER5_state_model.hpp  binomial_ASER5_state_model.stan  (+46 more)
testbed/: Main.hs
(+416 files in other folders)
