cabal-version:       2.2.0
-- The name of the package.
name:                BlueRipple

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- https://wiki.haskell.org/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
synopsis:            BlueRipple/FEC data analysis
-- description:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Adam Conner-Sax
maintainer:          adam_conner_sax@yahoo.com
-- copyright:
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md



common deps
  build-depends: base >= 4.11.1.0
               , array
               , blaze-html
               , containers
               , Frames
               , Frames-map-reduce >= 0.1.0.1
               , Frames-utils
               , foldl
               , freer-simple
               , here
               , hmatrix
               , knit-haskell >= 0.3.0.0 && < 0.4.0.0
               , lucid
               , pipes
               , polysemy >= 0.1.2.0 && < 0.2.0.0
               , profunctors
               , random-fu
               , random-source
               , statistics
               , text
               , vector
               , vinyl >= 0.10.0.1
                     

library
  import: deps
  ghc-options: -O1
  exposed-modules: BlueRipple.Data.FromDB
                 , BlueRipple.Data.DataSourcePaths
                 , BlueRipple.Data.DataFrames
                 , BlueRipple.Model.TurnoutBayes
  build-depends:       base >=4.11
                     , beam-core >= 0.8.0.0
                     , beam-sqlite >= 0.4.0.0
                     , data-default
                     , declarative
                     , formattable
                     , gamma
                     , hashable
                     , lens
                     , math-functions
                     , OpenFEC-beam
                     , parallel
                     , random >= 1.1 && < 1.2.0.0
                     , sqlite-simple
                     , template-haskell
                     , time
                     , tuple
  hs-source-dirs:      src
  default-language:    Haskell2010


executable dataLoader
  import: deps
  ghc-options: -O0
  hs-source-dirs: dataLoader
  main-is:        dataLoader.hs
  build-depends: base >= 4.11
               , BlueRipple
               , beam-core >= 0.8.0.0
               , beam-sqlite >= 0.4.0.0               
               , OpenFEC-beam
               , sqlite-simple
  default-language: Haskell2010               
           
  
executable mission
  import: deps
  ghc-options: -Wall -O0
  hs-source-dirs: mission
  main-is:        mission.hs
  build-depends: base >= 4.11
               , BlueRipple
               , lens
               , map-reduce-folds
               , time
  default-language: Haskell2010

executable turnout
  import: deps
  ghc-options: -Wall -O0 -threaded -rtsopts
  hs-source-dirs: reports
  main-is:        turnout.hs
  build-depends: base >= 4.11
               , BlueRipple
               , colonnade
               , blaze-colonnade
               , data-science-utils
               , discrimination
               , lens
               , map-reduce-folds >= 0.1.0.1
               , random
               , time
  default-language: Haskell2010               