cabal-version:       2.2.0
name:                blueripple-research

version:             0.3.0.0
synopsis:            BlueRipple current research 
description:         Current research projects live here and will trickle into their own repos when appropriate.
license:             BSD-3-Clause
license-file:        LICENSE
author:              Adam Conner-Sax
maintainer:          adam@blueripplepolitics.org
-- copyright:
category:            Numeric
build-type:          Simple
extra-source-files:  
data-dir: data
data-files: images/WWCV_Tweet.png
                      
common deps
  build-depends: base >= 4.11.1.0
               , array
               , blaze-html
               , blueripple-data-sets
               , cereal >= 0.5.7 && < 0.6
               , cereal-text >= 0.1.0 && < 0.2
               , containers
               , exceptions >= 0.10.4 && < 0.11
               , Frames >= 0.6.1 && < 0.8
               , Frames-map-reduce >= 0.3.0.0
               , Frames-hvega
               , Frames-utils >= 0.3.0.0
               , foldl
               , glm-haskell
               , groups
               , here
               , hvega >= 0.7.0 && < 0.10
               , hmatrix
               , knit-haskell >= 0.8.0.0 && < 0.9
               , lucid
               , map-reduce-folds >= 0.1.0.1
               , pipes
               , polysemy >= 0.2.1.0 && < 1.4
               , polysemy-plugin
               , primitive >= 0.7.0.0
               , profunctors
               , random-fu >= 0.2.7.3
               , random-source
               , semirings >= 0.5 && < 0.6
               , statistics
               , streamly >= 0.7.2 && < 0.8
               , text
               , tsne >= 1.2 && < 1.4
               , vector
               , vinyl >= 0.12 && < 0.14
                     
library
  import: deps
  ghc-options: -O2 -fdicts-strict -fmax-worker-args=16 -fspec-constr-recursive=16
    
  exposed-modules: BlueRipple.Configuration
                 , BlueRipple.Data.Keyed
                 , BlueRipple.Data.DemographicTypes
                 , BlueRipple.Data.ElectionTypes
                 , BlueRipple.Data.UsefulDataJoins
                 , BlueRipple.Data.PrefModel
                 , BlueRipple.Data.PrefModel.SimpleAgeSexRace
                 , BlueRipple.Data.PrefModel.SimpleAgeSexEducation
                 , BlueRipple.Data.PrefModel.AgeSexRace
                 , BlueRipple.Data.HouseElectionTotals
                 , BlueRipple.Data.Loaders
                 , BlueRipple.Data.ACS_PUMS
                 , BlueRipple.Data.ACS_PUMS_Loader.ACS_PUMS_Path
                 , BlueRipple.Data.ACS_PUMS_Loader.ACS_PUMS_Frame
                 , BlueRipple.Data.CPSVoterPUMS
                 , BlueRipple.Data.CPSVoterPUMS.CPSVoterPUMS_Path
                 , BlueRipple.Data.CPSVoterPUMS.CPSVoterPUMS_Frame
                 , BlueRipple.Model.PreferenceBayes
                 , BlueRipple.Model.Preference
                 , BlueRipple.Model.TurnoutAdjustment
                 , BlueRipple.Model.MRP                 
                 , BlueRipple.Model.PostStratify
                 , BlueRipple.Model.Turnout_MRP
                 , BlueRipple.Model.TSNE
                 , BlueRipple.Utilities.KnitUtils
                 , BlueRipple.Utilities.TableUtils                                  
                 , Paths_blueripple_research
  build-depends:       base >=4.11
                     , ad >= 3.4 && < 4.4
                     , blaze-colonnade
                     , colonnade
                     , data-default
                     , declarative
                     , direct-sqlite >= 2.3.23
                     , directory >= 1.3.3 && < 1.4
                     , discrimination >= 0.3 && < 0.5
                     , gamma
                     , hashable
                     , hmatrix
                     , lens
                     , math-functions
                     , mtl
                     , hmatrix-nlopt
                     , nonlinear-optimization >= 0.3.11 && < 0.4
                     , nonlinear-optimization-ad >= 0.2 && < 0.3
                     , pandoc
                     , parallel
                     , random >= 1.1 && < 1.2.0.0
                     , template-haskell
                     , time
                     , tuple
  hs-source-dirs:      src
  default-language:    Haskell2010


--executable dataLoader
--  import: deps
--  ghc-options: -O0
--  hs-source-dirs: dataLoader
--  main-is:        dataLoader.hs
--  build-depends: base >= 4.11
--               , blueripple-research
--               , beam-core >= 0.8.0.0
--               , beam-sqlite >= 0.4.0.0               
--               , OpenFEC-beam
--               , sqlite-simple
-- default-language: Haskell2010               
           
  
executable mission
  import: deps
  ghc-options: -fplugin=Polysemy.Plugin -Wall -O0
  hs-source-dirs: mission
  main-is:        mission.hs
  build-depends: base >= 4.11
               , blueripple-research
               , lens
               , map-reduce-folds
               , time
  default-language: Haskell2010

executable preference-model
  import: deps
  ghc-options: -Wall -O0 -threaded -rtsopts
  hs-source-dirs: reports
  main-is:       PreferenceModel/preference_model.hs
  other-modules: PreferenceModel.Common
               , PreferenceModel.Methods
               , PreferenceModel.PM2018
               , PreferenceModel.ExitPolls
               , PreferenceModel.AcrossTime
               , Explainer.WWCV
               , Paths_blueripple_research
--  autogen-modules: Paths_preference_model                           
  build-depends: base >= 4.11
               , blueripple-research
               , blaze-colonnade
               , cmdargs
               , colonnade
               , data-science-utils
               , directory
               , lens
               , mtl
               , pandoc
               , random
               , time
  default-language: Haskell2010

executable mrp-model
  import: deps
--  ghc-options: -Wall -O0 
  ghc-options: -Wall -O0 -threaded 
  hs-source-dirs: reports
  main-is:        MRP/MRP.hs
  other-modules:  MRP.CCESPath
                , MRP.CCES
                , MRP.CCESFrame
                , MRP.CCES_MRP_Analysis
                , MRP.Common
                , MRP.CachedModels
                , PreferenceModel.Common
                , MRP.WWC
                , MRP.Pools
                , MRP.DeltaVPV
                , MRP.Kentucky
                , MRP.Wisconsin
                , MRP.TurnoutGaps
                , MRP.ElectoralWeights
                , MRP.Language
                , MRP.BidenVsWWC
                , MRP.DistrictClusters
                , MRP.ElectoralWeights
                , Visualizations.StatePrefs
  build-depends: base >= 4.11
               , blaze-colonnade
               , cmdargs
               , cereal >= 0.5.7 && < 0.6
               , cereal-text >= 0.1.0 && < 0.2
               , colonnade
               , discrimination
               , finite-typelits >= 0.1.4.2
               , grid >= 7.8 && < 7.10
               , hashable >= 1.2 && < 1.3.0
               , lens >= 4.16 && < 5
               , log-domain < 0.13
               , mtl >= 2.1 && < 2.3.0
               , pandoc
               , polysemy-RandomFu
               , som > 10.0 && < 10.2
               , sparse-linear-algebra
               , blueripple-research
               , glm-haskell
               , time
  default-language: Haskell2010                 