cabal-version:       3.0
name:                blueripple-research

version:             0.3.0.0
synopsis:            BlueRipple current research
description:         Current research projects live here and will trickle into their own repos when appropriate.
license:             BSD-3-Clause
license-file:        LICENSE
author:              Adam Conner-Sax
maintainer:          adam@blueripplepolitics.org
-- copyright:
category:            Numeric
build-type:          Simple
extra-source-files:
data-dir: data
data-files: images/WWCV_Tweet.png

common deps
  build-depends: base >= 4.11.1.0
               , array
               , blaze-html
               , blueripple-data-sets
               , cereal >= 0.5.7 && < 0.6
               , cereal-text >= 0.1.0 && < 0.2
               , clock >= 0.8 && < 0.9
               , containers >= 0.5 && < 0.7
               , data-science-utils
               , discrimination
               , exceptions >= 0.10.4 && < 0.11
               , Frames >= 0.6.1 && < 0.8
               , Frames-map-reduce >= 0.3.0.0
               , Frames-hvega >= 0.3
               , Frames-utils >= 0.3.1
               , Frames-streamly >= 0.1.0
               , foldl >= 1.4 && < 1.5
               , foldl-statistics >= 0.1.5 && < 0.2
               , generic-optics
               , glm-haskell
               , groups
               , here
               , hvega >= 0.7.0 && < 0.12
               , hvega-utils >= 0.3.0 && < 0.4
               , hmatrix
               , knit-haskell >= 0.8.0 && < 0.11
               , lens
               , lucid
               , massiv >= 0.5.4 && < 0.6
               , map-reduce-folds >= 0.1.0.1
               , optics >= 0.3 && < 0.4
               , pipes
               , polysemy >= 0.2.1.0 && < 1.4
               , polysemy-plugin
               , primitive >= 0.7.0.0
               , profunctors
               , random-fu >= 0.2.7.3
               , random-source
               , relude >=0.7.0 && < 0.8
               , semirings >= 0.5 && < 0.6
               , say >= 0.1.0.1 && < 0.2
               , statistics
               , streamly >= 0.7.2 && < 0.8
               , text
               , time
               , tsne >= 1.2 && < 1.4
               , vector >= 0.11 && < 0.13
               , vector-builder >= 0.3.7 && < 0.4
               , vinyl >= 0.13 && < 0.14

library  haskell-stan
  build-depends: base >= 4.13 && < 4.16
               , aeson >= 1.4 && < 1.6
               , bytestring >= 0.10 && < 0.12
               , cereal-vector >= 0.2 && < 0.3
               , colonnade
               , containers
               , directory >= 1.3.3 && < 1.4
               , foldl >= 1.4 && < 1.5
               , Frames >= 0.6.1 && < 0.8
               , Frames-streamly >= 0.1.0
               , hs-cmdstan >= 0.1 && < 0.2
               , here
               , knit-haskell >= 0.9 && < 0.11
               , polysemy
               , process >= 1.6 && < 1.7
               , relude >=0.7.0 && < 0.8
               , say >= 0.1.0.1 && < 0.2
               , streamly >= 0.7.2 && < 0.8
               , text
               , time
               , vector
               , vector-builder >= 0.3.7 && < 0.4
               , vinyl >= 0.13 && < 0.14
  mixins:  base hiding (Prelude)
         , relude (Relude as Prelude
         , Relude.Extra)
  exposed-modules: Stan.JSON
                  , Stan.Parameters
                  , Stan.ModelConfig
                  , Stan.ModelRunner
                  , Stan.ModelBuilder
                  , Stan.RScriptBuilder
                  , Stan.Frames
  hs-source-dirs:   haskell-stan/src
  default-language: Haskell2010


library
  import: deps
  ghc-options: -O2 -fdicts-strict -fmax-worker-args=16 -fspec-constr-recursive=16 -fprint-potential-instances

  exposed-modules: BlueRipple.Configuration
                 , BlueRipple.Data.Keyed
                 , BlueRipple.Data.DemographicTypes
                 , BlueRipple.Data.ElectionTypes
                 , BlueRipple.Data.UsefulDataJoins
                 , BlueRipple.Data.PrefModel
                 , BlueRipple.Data.PrefModel.SimpleAgeSexRace
                 , BlueRipple.Data.PrefModel.SimpleAgeSexEducation
                 , BlueRipple.Data.PrefModel.AgeSexRace
                 , BlueRipple.Data.HouseElectionTotals
                 , BlueRipple.Data.LoadersCore
                 , BlueRipple.Data.Loaders
                 , BlueRipple.Data.ACS_PUMS
                 , BlueRipple.Data.ACS_PUMS_Loader.ACS_PUMS_Path
                 , BlueRipple.Data.ACS_PUMS_Loader.ACS_PUMS_Frame
                 , BlueRipple.Data.CPSVoterPUMS
                 , BlueRipple.Data.CPSVoterPUMS.CPSVoterPUMS_Path
                 , BlueRipple.Data.CPSVoterPUMS.CPSVoterPUMS_Frame
                 , BlueRipple.Data.CCESPath
                 , BlueRipple.Data.CCESFrame
                 , BlueRipple.Data.CCES
                 , BlueRipple.Model.StanCCES
                 , BlueRipple.Model.CachedModels
                 , BlueRipple.Model.PreferenceBayes
                 , BlueRipple.Model.Preference
                 , BlueRipple.Model.TurnoutAdjustment
                 , BlueRipple.Model.CCES_MRP_Analysis
                 , BlueRipple.Model.MRP
                 , BlueRipple.Model.PostStratify
                 , BlueRipple.Model.Turnout_MRP
                 , BlueRipple.Model.TSNE
                 , BlueRipple.Model.House.ElectionResult
                 , BlueRipple.Utilities.KnitUtils
                 , BlueRipple.Utilities.TableUtils
                 , BlueRipple.Utilities.FramesUtils
                 , Paths_blueripple_research
  build-depends:       base >=4.11
                     , ad >= 3.4 && < 4.4
                     , aeson >= 1.4 && < 1.6
                     , blaze-colonnade
                     , bytestring >= 0.10 && < 0.12
                     , colonnade
                     , cereal-vector >= 0.2 && < 0.3
                     , data-default
                     , declarative
                     , direct-sqlite >= 2.3.23
                     , directory >= 1.3.3 && < 1.4
                     , discrimination >= 0.3 && < 0.5
                     , gamma
                     , hs-cmdstan
                     , hashable
                     , hashtables >= 1.2.3.4 && < 1.3
                     , haskell-stan
                     , hmatrix
                     , lens
                     , math-functions
                     , mtl
                     , hmatrix-nlopt
                     , nonlinear-optimization >= 0.3.11 && < 0.4
                     , nonlinear-optimization-ad >= 0.2 && < 0.3
                     , pandoc
                     , parallel
                     , random >= 1.1 && < 1.3
                     , template-haskell
                     , time
                     , tuple
                     , vector-th-unbox >= 0.2.1.7
  mixins:  base hiding (Prelude)
         , relude (Relude as Prelude
         , Relude.Extra)
  hs-source-dirs:      src
  default-language:    Haskell2010


--executable dataLoader
--  import: deps
--  ghc-options: -O0
--  hs-source-dirs: dataLoader
--  main-is:        dataLoader.hs
--  build-depends: base >= 4.11
--               , blueripple-research
--               , beam-core >= 0.8.0.0
--               , beam-sqlite >= 0.4.0.0
--               , OpenFEC-beam
--               , sqlite-simple
-- default-language: Haskell2010


executable mission
  import: deps
  ghc-options: -fplugin=Polysemy.Plugin -Wall -O0
  hs-source-dirs: mission
  main-is:        mission.hs
  build-depends: base >= 4.11
               , blueripple-research
               , lens
               , map-reduce-folds
               , time
  default-language: Haskell2010

executable preference-model
  import: deps
  ghc-options: -Wall -O0 -threaded -rtsopts
  hs-source-dirs: reports
  main-is:       PreferenceModel/preference_model.hs
  other-modules: PreferenceModel.Common
               , PreferenceModel.Methods
               , PreferenceModel.PM2018
               , PreferenceModel.ExitPolls
               , PreferenceModel.AcrossTime
               , Explainer.WWCV
               , Paths_blueripple_research
--  autogen-modules: Paths_preference_model
  build-depends: base >= 4.11
               , blueripple-research
               , blaze-colonnade
               , cmdargs
               , colonnade
               , directory
               , lens
               , mtl
               , pandoc
               , random
               , time
  default-language: Haskell2010

executable mrp-model
  import: deps
--  ghc-options: -Wall -O0
  ghc-options: -Wall  -fdicts-strict -fmax-worker-args=16 -fspec-constr-recursive=16
  hs-source-dirs: reports
  main-is:        MRP/MRP.hs
  other-modules: MRP.Common
                , PreferenceModel.Common
                , MRP.WWC
                , MRP.Pools
                , MRP.DeltaVPV
                , MRP.Kentucky
                , MRP.Wisconsin
                , MRP.TurnoutGaps
                , MRP.ElectoralWeights
                , MRP.Language
                , MRP.BidenVsWWC
                , MRP.DistrictClusters
                , MRP.ElectoralWeights
                , Visualizations.StatePrefs
  build-depends: base >= 4.11
               , blaze-colonnade
               , cmdargs
               , cereal >= 0.5.7 && < 0.6
               , cereal-text >= 0.1.0 && < 0.2
               , colonnade
               , discrimination
               , finite-typelits >= 0.1.4.2
               , grid >= 7.8 && < 7.10
               , hashable >= 1.2 && < 1.3.0
               , lens >= 4.16 && < 5
               , log-domain < 0.13
               , mtl >= 2.1 && < 2.3.0
               , pandoc
               , polysemy-RandomFu
               , som > 10.0 && < 10.2
               , sparse-linear-algebra
               , blueripple-research
               , glm-haskell
               , time
  mixins:  base hiding (Prelude)
         , relude (Relude as Prelude
         , Relude.Extra)
  default-language: Haskell2010

executable stan-models
  import: deps
  ghc-options: -O2 -Wall -threaded  -fdicts-strict -fmax-worker-args=16 -fspec-constr-recursive=16
  hs-source-dirs: stan
  main-is: Main.hs
  build-depends: base
               , blueripple-research
               , blueripple-data-sets
               , bytestring
               , cassava
               , polysemy-RandomFu
               , haskell-stan
               , hs-cmdstan
  mixins:  base hiding (Prelude)
         , relude (Relude as Prelude
         , Relude.Extra)

executable ga-work
  import: deps
  ghc-options: -O2 -Wall -threaded  -fdicts-strict -fmax-worker-args=16 -fspec-constr-recursive=16
  hs-source-dirs: georgia
  main-is: Main.hs
  other-modules: GA_DataPaths, GA_DataFrames, Data, Models, Parsers
  build-depends: base
               , aeson
               , blueripple-research
               , blueripple-data-sets
               , bytestring
               , cassava
               , directory
               , megaparsec
               , polysemy-RandomFu
               , hs-cmdstan
               , say

executable FEC-data
  import: deps
  ghc-options: -Wall
  hs-source-dirs: FEC-data
  main-is: Main.hs
  other-modules: FromDB
  build-depends: base
               , beam-core >= 0.9.0.0
               , beam-sqlite
               , blueripple-research
               , data-default
               , OpenFEC-beam
               , sqlite-simple
               , time
               , tuple

executable house-data
  import: deps
  ghc-options: -Wall -threaded
  hs-source-dirs: house-data, reports
  main-is: Main.hs
  build-depends: base
               , blueripple-research
               , blueripple-data-sets
               , polysemy-RandomFu

executable testbed
  import: deps
--  ghc-options: -Wall -O0
--  ghc-options: -Wall -prof -fprof-auto -fexternal-interpreter -fdicts-strict -fmax-worker-args=16 -fspec-constr-recursive=16
  ghc-options: -Wall -eventlog -rtsopts
  hs-source-dirs: testbed
  main-is:        Main.hs
  build-depends: base >= 4.11
               , cereal >= 0.5.7 && < 0.6
               , cereal-text >= 0.1.0 && < 0.2
               , blueripple-research
               , time
  default-language: Haskell2010
